--- a/preinstalls/package.json
+++ b/preinstalls/package.json
@@ -4,6 +4,6 @@
   "license": "MIT",
   "dependencies": {
     "playwright": "1.57.0",
-    "http-server": "14.1.1"
+    "playwright-core": "1.57.0"
   }
 }
